--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "docs",
+  "name": "mc-ui-docs",
   "private": true,
   "version": "1.0.0",
-  "description": "ArtitalkJS-docs",
-  "repository": "https://github.com/ArtitalkJS/docs",
-  "author": "ArtitalkJS",
+  "description": "mcui docs",
+  "repository": "https://github.com/minchao920917/mc-ui-docs",
+  "author": "minchao",
   "license": "MIT",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.5.3"
+    "vuepress": "^1.5.3",
+    "vuepress-plugin-demo-container": "^0.2.0"
   },
   "dependencies": {
     "markdown-it-task-lists": "^2.1.1",
+    "mch-ui": "^0.1.2",
     "vuepress-theme-yilia-plus": "^1.0.0"
   }
 }
